# SCC

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  TODO.md  build.sh
src/: ConstantTokens.txt  File.cpp  File.hpp  Keyword.txt  KeywordTokens.txt  SeparatorTokens.txt  TokenType.def  TokenType.txt  Tokenizer.cpp  Tokenizer.hpp  Tokens.hpp  main.cpp
tests/: main.txt  singlechartokens.txt  test.txt
